k8s_manifests/argocd-ingress-http.yaml
---
# Simple HTTP Ingress for ArgoCD (Development)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "argocd-ingress-ip"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: argocd.local
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
